@@ -1,5 +1,6 @@
 package org.sergei.manager.service;
 
+import com.google.common.collect.ImmutableList;
 import lombok.extern.slf4j.Slf4j;
 import org.sergei.manager.jpa.model.Owner;
 import org.sergei.manager.jpa.model.mappers.OwnerModelMapper;
@@ -49,12 +50,12 @@ public class OwnerServiceImpl implements OwnerService {
         List<Owner> ownerList = ownerRepository.findAll();
         if (ownerList.isEmpty()) {
             List<ResponseErrorDTO> responseErrorList = messageService.responseErrorListByCode("AIR-001");
-            return new ResponseEntity<>(new ResponseDTO<>(responseErrorList, List.of()), HttpStatus.NOT_FOUND);
+            return new ResponseEntity<>(new ResponseDTO<>(responseErrorList, ImmutableList.of()), HttpStatus.NOT_FOUND);
         } else {
             List<OwnerDTO> aircraftDTOList = ownerDTOListMapper.apply(ownerList);
 
             ResponseDTO<OwnerDTO> response = new ResponseDTO<>();
-            response.setErrorList(List.of());
+            response.setErrorList(ImmutableList.of());
             response.setResponse(aircraftDTOList);
 
             return new ResponseEntity<>(response, HttpStatus.OK);
@@ -66,18 +67,18 @@ public class OwnerServiceImpl implements OwnerService {
         Long ownerId = request.getOwnerId();
         if (ownerId == null) {
             List<ResponseErrorDTO> responseErrorList = messageService.responseErrorListByCode("OW-001");
-            return new ResponseEntity<>(new ResponseDTO<>(responseErrorList, List.of()), HttpStatus.NOT_FOUND);
+            return new ResponseEntity<>(new ResponseDTO<>(responseErrorList, ImmutableList.of()), HttpStatus.NOT_FOUND);
         }
 
         Optional<Owner> owner = ownerRepository.findById(ownerId);
         if (owner.isEmpty()) {
             log.debug("Owner with ID: {} not found", ownerId);
             List<ResponseErrorDTO> responseErrorList = messageService.responseErrorListByCode("AIR-001");
-            return new ResponseEntity<>(new ResponseDTO<>(responseErrorList, List.of()), HttpStatus.NOT_FOUND);
+            return new ResponseEntity<>(new ResponseDTO<>(responseErrorList, ImmutableList.of()), HttpStatus.NOT_FOUND);
         } else {
             OwnerDTO ownerDTO = ownerDTOMapper.apply(owner.get());
             ResponseDTO<OwnerDTO> response = new ResponseDTO<>();
-            response.setErrorList(List.of());
+            response.setErrorList(ImmutableList.of());
             response.setResponse(List.of(ownerDTO));
             return new ResponseEntity<>(response, HttpStatus.OK);
         }
@@ -88,7 +89,7 @@ public class OwnerServiceImpl implements OwnerService {
         Owner owner = ownerModelMapper.apply(ownerDTO);
         Owner savedOwner = ownerRepository.save(owner);
         OwnerDTO savedOwnerDTO = ownerDTOMapper.apply(savedOwner);
-        return new ResponseEntity<>(new ResponseDTO<>(List.of(), List.of(savedOwnerDTO)), HttpStatus.OK);
+        return new ResponseEntity<>(new ResponseDTO<>(ImmutableList.of(), List.of(savedOwnerDTO)), HttpStatus.OK);
     }
 
     @Override
@@ -96,19 +97,19 @@ public class OwnerServiceImpl implements OwnerService {
         Long ownerId = ownerDTO.getId();
         if (ownerId == null) {
             List<ResponseErrorDTO> responseErrorList = messageService.responseErrorListByCode("RP-001");
-            return new ResponseEntity<>(new ResponseDTO<>(responseErrorList, List.of()), HttpStatus.OK);
+            return new ResponseEntity<>(new ResponseDTO<>(responseErrorList, ImmutableList.of()), HttpStatus.OK);
         } else {
             Optional<Owner> owner = ownerRepository.findById(ownerId);
             if (owner.isEmpty()) {
                 List<ResponseErrorDTO> responseErrorList = messageService.responseErrorListByCode("OW-001");
-                return new ResponseEntity<>(new ResponseDTO<>(responseErrorList, List.of()), HttpStatus.OK);
+                return new ResponseEntity<>(new ResponseDTO<>(responseErrorList, ImmutableList.of()), HttpStatus.OK);
             } else {
                 Owner ownerUpdated = ownerModelMapper.apply(ownerDTO);
                 Owner ownerSaved = ownerRepository.save(ownerUpdated);
                 OwnerDTO ownerSavedDTO = ownerDTOMapper.apply(ownerSaved);
 
                 ResponseDTO<OwnerDTO> response = new ResponseDTO<>();
-                response.setErrorList(List.of());
+                response.setErrorList(ImmutableList.of());
                 response.setResponse(List.of(ownerSavedDTO));
 
                 return new ResponseEntity<>(response, HttpStatus.OK);
@@ -120,12 +121,12 @@ public class OwnerServiceImpl implements OwnerService {
     public ResponseEntity<ResponseDTO<OwnerDTO>> delete(Long ownerId) {
         if (ownerId == null) {
             List<ResponseErrorDTO> responseErrorList = messageService.responseErrorListByCode("RP-001");
-            return new ResponseEntity<>(new ResponseDTO<>(responseErrorList, List.of()), HttpStatus.NOT_FOUND);
+            return new ResponseEntity<>(new ResponseDTO<>(responseErrorList, ImmutableList.of()), HttpStatus.NOT_FOUND);
         } else {
             Optional<Owner> owner = ownerRepository.findById(ownerId);
             if (owner.isEmpty()) {
                 List<ResponseErrorDTO> responseErrorList = messageService.responseErrorListByCode("AIR-001");
-                return new ResponseEntity<>(new ResponseDTO<>(responseErrorList, List.of()), HttpStatus.NOT_FOUND);
+                return new ResponseEntity<>(new ResponseDTO<>(responseErrorList, ImmutableList.of()), HttpStatus.NOT_FOUND);
             } else {
                 ownerRepository.delete(owner.get());
                 return new ResponseEntity<>(HttpStatus.NO_CONTENT);
